Closed Bug 412789 Opened 17 years ago Closed 16 years ago

building in minimal profile broken. bug368835 and bug366527

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1a1

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(1 file)

landing of bug368835 and bug366527 broke building in minimal profile
Attachment #297555 - Flags: review?(aaronleventhal)
Attachment #297555 - Flags: review?(aaronleventhal) → review+
Keywords: checkin-needed
Any progress here?
Assignee: aaronleventhal → romaxa
Pushed the part that still was needed in 15844:62f9945e5a5d.
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: