Bug 412789 - "building in minimal profile broken. bug368835 and bug366527" [r=aaronlev]